<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:padding="8dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="90dp"
            android:layout_height="83dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/user_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image" />
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/materialCardView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.18">

            <TextView
                android:id="@+id/name_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_bold"
                android:maxLines="1"
                android:text="@string/name"
                android:textColor="@color/title_card" />

            <TextView
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe"
                android:maxLines="1"
                android:textColor="@color/des_card" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/more"
            android:layout_width="72dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginEnd="24dp"
            android:background="@drawable/follow"
            android:text="@string/more"
            android:textAllCaps="false"
            android:textColor="@color/title_card"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.506" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>